// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ClientData;
// The greeting service definition.
service ClientData {
  // Sends a greeting
  rpc ClientDataPut (ClientDataPutReq) returns (ClientDataPutResp) {}
  rpc ClientDataDelete (ClientDataDeleteReq) returns (ClientDataDeleteResp) {}
  rpc ClientDataRead (ClientDataReadReq) returns (ClientDataReadResp) {}
}

// The request message containing the user's name.
message ClientDataPutReq {
  string key = 1;
  string value = 2;
}

message ClientDataPutResp{
  string message = 1;
}

// The response message containing the greetings
message ClientDataReadReq {
  string key = 1;
}

message ClientDataReadResp{
  string value = 1;
  string message = 2;
}

message ClientDataDeleteReq {
  string key = 1;
}

message ClientDataDeleteResp{
  string message = 1;
}
