// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package MasterData;
// The greeting service definition.
service MasterData {
  // Sends a greeting
  rpc MasterDataPut (MasterDataPutReq) returns (MasterDataPutResp) {}
  rpc MasterDataDelete (MasterDataDeleteReq) returns (MasterDataDeleteResp) {}
  rpc MasterDataRead (MasterDataReadReq) returns (MasterDataReadResp) {}
}

// The request message containing the user's name.
message MasterDataPutReq {
  string name = 1;
}

// The response message containing the greetings
message MasterDataPutResp {
  string message = 1;
}

message MasterDataDeleteReq {
  string name = 1;
}

// The response message containing the greetings
message MasterDataDeleteResp {
  string message = 1;
}


message MasterDataReadReq {
  string name = 1;
}

// The response message containing the greetings
message MasterDataReadResp {
  string message = 1;
}

